styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* noto-serif-font */

.noto-serif-regular {
    font-family: "Noto Serif", serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings: "wdth" 100;
}

.inter-regular {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
}

/* common-style */
.container-measure {
    max-width: 1320px;
    margin: 50px auto;
}

/* navbar */

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 30px;
}

.nav-left {
    display: flex;
    font-size: 2rem;
    color: #e95a08;
}

.nav-left .fa-solid {
    font-size: 4rem;
}

.nav-left h2 {
    font-style: italic;
}

h2 .shop {
    font-size: 12px;
    color: rgb(209, 186, 156);
}

.nav-right {
    display: flex;
    margin-left: 20px;
}

.nav-right li {
    list-style: none;
}

.nav-right a {
    text-decoration: none;
    margin-left: 50px;
}

.nav-list-1,
.nav-list-4 .nav-link {
    color: #252432;
    font-weight: bold;
}

.nav-list-2,
.nav-list-3 {
    color: #8987a1;
}

.nav-list-4 .fa-solid {
    margin-right: 7px;
}

/* nav-banner-start */
.nav-banner {
    margin: 100px auto;
    display: flex;
    justify-content: space-between;
    justify-items: center;
    align-items: center;
}

.nav-title {
    color: #000000;
    font-size: 4rem;
    font-weight: 700;
    margin: 20px 0;
    padding-top: 30px;
}

.fress {
    color: #e95a08;
}

.nav-description {
    font-size: 1.2rem;
    color: #00000080;
    margin: 20px 0;
}

.nav-img img {
    min-width: 570px;
}

/* our-plants */
.plant-content {
    text-align: center;
}

.plant-header {
    font-size: 50px;
    font-weight: 700;
    color: #000000;
    margin: 10px 0;
}

.our {
    color: #e95a08;
}

.plants-description {
    font-size: 22px;
    color: #00000080;
    margin: 10px;
}

.plant-card-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
}

.card {
    width: 100%;
    text-align: center;
    margin: 20px 0;
}

.card-title {
    font-weight: 500;
    font-size: 22px;
    color: #111111;
    margin: 15px 0 10px 0;
}

.card-price {
    font-weight: 700;
    font-size: 22px;
    color: #111111;
    margin: 10px 0 10px 0;
}

.card-btn {
    padding: 20px 80px;
    background-color: #e95a08;
    font-weight: 600;
    color: white;
    border: none;
}

/* plant-lover-section */
.plants-lover-section {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-top: 145px;
    position: relative;
}

.plant-lover-left img {
    max-width: 540px;
    max-height: 590px;
}

.trusted-seller img {
    max-width: 280px;
    max-height: 280px;
    position: absolute;
    top: -122px;
    right: 610px;
}

.plant-lover-title {
    font-weight: 700;
    font-size: 3rem;
    margin-bottom: 15px;
}

.plants-list .plant-item {
    font-size: 22px;
    color: rgba(0, 0, 0, 0.5);
    margin-bottom: 10px;
}

/* latest-deals-section */

.latest-deals-content {
    text-align: center;
}

.latest-title {
    font-weight: 700;
    font-size: 3rem;
}

.latest {
    color: #e95a08;
}

.latest-description {
    color: #00000080;
    font-size: 22px;
    margin: 15px 0 20px 0;
}

/* box-card */

.latest-deals-box {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-auto-rows: 1fr;
    gap: 10px;
    margin: 50px 0;
}

.box {
    position: relative;
    border-radius: 10px;
    overflow: hidden;
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    text-align: center;
}

.box a {
    color: white;
    text-decoration: underline;
    font-weight: bold;
}

.box::before {
    content: "";
    position: absolute;
    inset: 0;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1;
}

.box-content {
    position: relative;
    z-index: 2;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.box-1 {
    grid-column: 1;
    grid-row: 1;
    background-image: url("../assets/deal-ana.png");
    min-height: 200px;
}

.box-2 {
    grid-column: 1;
    grid-row: 2;
    background-image: url("../assets/deal-bloom.png");
    min-height: 200px;
}

.box-3 {
    grid-column: 2;
    grid-row: 1 / 3;
    background-image: url("../assets/deal-zabo.png");
    min-height: 400px;
}

.box-3 .box-content p {
    font-weight: 700;
    font-size: 2rem;
}

.box-3 .box-content a {
    font-weight: 600;
    font-size: 1.5rem;
}

/* joint-colorfull-section */

.join-colorfull-section {
    margin: 70px 0;
    background-image: url("../assets/news-letter-bg.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.joint-heading {
    font-weight: 700;
    font-size: 3rem;
    color: white;
    margin-bottom: 20px;
    text-align: center;
}

.joint-submission {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.btn {
    padding: 20px 50px;
    border: none;
    color: white;
    background-color: #e95a08;
    font-weight: 600;
}

.btn:hover {
    cursor: pointer;
}

.input-email {
    height: 58px;
    width: 600px;
    padding: 10px 15px;
    border: none;
}

/* footer-section */
.footer-container {
    display: flex;
    justify-content: space-between;
}

.footer-left .fa-solid {
    font-size: 4rem;
    color: #e95a08;
    margin-bottom: 10px;
}

.footer-left-description {
    font-size: 22px;
    color: #00000080;
}

.list-1 {
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.list-1 li {
    list-style: none;
}

.list-1 li a {
    text-decoration: none;
    color: #6b7280;
}

.list-2 {
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.list-2 li {
    list-style: none;
}

.list-2 li a {
    text-decoration: none;
    color: #6b7280;
}

.footer-icon img:nth-child(2) {
    margin-bottom: 10px;
}

.footer-icon img {
    margin-left: 30px;
    text-align: center;
}

/* media-responsive- */

/* nav-bar */
@media screen and (max-width: 576px) {

    .nav-list-1,
    .nav-list-2,
    .nav-list-3 {
        display: none;
    }

    /* nav-banner */
    .nav-banner {
        flex-direction: column-reverse;
        margin: 50px auto;
    }

    .nav-banner-left {
        padding-left: 15px;
    }

    .nav-title {
        font-size: 2.5rem;
    }

    .nav-img img {
        width: 100%;
    }

    /* our-plant */
    .plant-card-container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 10px;
    }

    /* plant-lover-section */
    .plants-lover-section {
        flex-direction: column;
    }

    .trusted-seller {
        display: none;
    }

    .plant-lover-title {
        font-size: 2rem;
        margin-top: 10px;
    }

    .plant-lover-left img {
        width: 100%;
        display: block;
        margin: 0 auto;
    }

    /* deals-section */
    .latest-deals-box {
        grid-template-columns: 1fr;
        grid-template-rows: auto;
    }

    .box-1,
    .box-2,
    .box-3 {
        grid-column: 1;
        grid-row: auto;
        height: 200px;
        min-height: unset;
        grid-row: auto;
    }
    .latest-deals-content .latest-title{
        font-weight: bold;
        font-weight: 1.5rem;
    }
    .box-content,
    .noto-serif-regular {
        font-weight: 700;
        font-size: 20px;
    }
    .box-3 .box-content p {
         font-weight: 700;
        font-size: 20px;
    }
      .box-3 .box-content a {
         font-weight: 600;
        font-size: 20px;
    }

    /* joint-colorfull-sction */
    .joint-heading {
        font-size: 1.5rem;
        font-weight: 700;
    }

    .input-email {
        width: 260px;
    }

    .btn {
        padding: 21px 35px;
    }

    /* footer-section */
    .footer-container {
        width: 100%;
        flex-direction: column;
        padding-left: 20px;
    }

    .footer-icon {
        padding-top: 20px;
    }
}

